--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css')
 * {
     box-sizing: border-box;
     margin: 0;
